<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".GoalSongActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:id="@+id/settingsbutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="settingsOnClick" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Home team"
            android:id="@+id/home_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/home_team_score" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Away team"
            android:id="@+id/away_name"
            android:layout_marginLeft="200dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/away_team_score"
            android:layout_marginLeft="200dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="180dp"
            android:text="@string/home_goal"
            android:id="@+id/homegoalbutton"
            android:layout_above="@+id/button3"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_weight="0.37"
            android:onClick="homeGoalButtonOnClick"
            android:layout_marginTop="50dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="200dp">

        <Button
            android:layout_width="155dp"
            android:layout_height="180dp"
            android:text="@string/away_goal"
            android:id="@+id/awaygoalbutton"
            android:layout_toEndOf="@+id/faceoffbutton"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="awayGoalButtonOnClick"
            android:layout_marginTop="50dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_song"
            android:id="@+id/stopbutton"
            android:layout_marginTop="345dp"
            android:onClick="stopGoalSongOnClick"
            android:layout_marginLeft="250dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mute_song"
            android:id="@+id/mutebutton"
            android:layout_marginTop="-50dp"
            android:layout_marginLeft="170dp"
            android:onClick="muteGoalSongOnClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operate_timer"
            android:id="@+id/operate_timer"
            android:layout_marginTop="-50dp"
            android:onClick="timerStartStopOnClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/reset_button"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="180dp"
            style="?android:attr/buttonStyleSmall"
            android:onClick="resetButtonOnClick" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:text="@string/faceoff_song"
            android:id="@+id/faceoffbutton"
            android:layout_marginTop="280dp"
            android:layout_marginLeft="90dp"
            android:onClick="faceoffSongButtonOnClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Status"
            android:id="@+id/statusTextView"
            android:layout_marginTop="240dp"
            android:layout_marginLeft="50dp" />
    </LinearLayout>
</RelativeLayout>
